link de imagenes roto

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header id="encabezado">
         <div class="header__izq" >
           <img
-            src="/img/codoacodo.png"
+            src="./img/codoacodo.png"
             alt="logo codo a codo"
             class="header__izq-logo"
           />
