links rotos imagenes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header id="encabezado">
         <div class="header__izq" >
           <img
-            src="./img/codoacodo.png"
+            src="../img/codoacodo.png"
             alt="logo codo a codo"
             class="header__izq-logo"
           />
@@ -61,7 +61,7 @@
         <h2 class="oradores__titulo">ORADORES</h2>
         <ul class="card">
           <li class="card__item">
-            <img src="/img/steve.jpg" alt="Steve jobs" class="card__item-img" />
+            <img src="../img/steve.jpg" alt="Steve jobs" class="card__item-img" />
             <div class="card__item-tags">
               <span style="color: black; background-color: yellow"
                 >JavaScript</span
@@ -79,7 +79,7 @@
             </p>
           </li>
           <li class="card__item">
-            <img src="/img/bill.jpg" alt="Bill Gates" class="card__item-img" />
+            <img src="../img/bill.jpg" alt="Bill Gates" class="card__item-img" />
             <div class="card__item-tags">
               <span style="color: black; background-color: yellow"
                 >JavaScript</span
@@ -97,7 +97,7 @@
             </p>
           </li>
           <li class="card__item">
-            <img src="/img/ada.jpeg" alt="Ada" class="card__item-img" />
+            <img src="../img/ada.jpeg" alt="Ada" class="card__item-img" />
             <div class="card__item-tags">
               <span style="color: white; background-color: gray">Negocios</span>
               <span style="color: white; background-color: red">Startups</span>
@@ -115,7 +115,7 @@
       <section class="postal" id="postal">
         <div class="postal__colIzq">
           <img
-            src="/img/honolulu.jpg"
+            src="../img/honolulu.jpg"
             alt="Honolulu"
             class="postal__colIzq-img"
           />
