--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <section class="postal" id="postal">
         <div class="postal__colIzq">
           <img
-            src="../img/honolulu.jpg"
+            src="img/honolulu.jpg"
             alt="Honolulu"
             class="postal__colIzq-img"
           />
