Correccion opacidad Heroe image

--- a/index.html
+++ b/index.html
@@ -14,46 +14,48 @@
     <title>TP Integrador</title>
   </head>
   <body>
+    <header id="encabezado">
+      <div class="header__izq">
+        <img
+          src="img/codoacodo.png"
+          alt="logo codo a codo"
+          class="header__izq-logo"
+        />
+        <h2 class="header__izq-titulo">Conf Bs As</h2>
+      </div>
+      <div class="header__der">
+        <a class="header__der-item" href="#heroe" style="color: white"
+          >La Conferencia</a
+        >
+        <a class="header__der-item" href="#oradores" style="color: gray"
+          >Los oradores</a
+        >
+        <a class="header__der-item" href="#postal" style="color: gray"
+          >El lugar y la fecha</a
+        >
+        <a class="header__der-item" href="#formulario" style="color: gray"
+          >Conviértete en orador</a
+        >
+        <a class="header__der-item" href="#heroe" style="color: green"
+          >Comprar tickets</a
+        >
+      </div>
+    </header>
     <main>
-      <header id="encabezado">
-        <div class="header__izq" >
-          <img
-            src="img/codoacodo.png"
-            alt="logo codo a codo"
-            class="header__izq-logo"
-          />
-          <h2 class="header__izq-titulo">Conf Bs As</h2>
-        </div>
-        <div class="header__der">
-          <a class="header__der-item" href="#heroe" style="color: white"
-            >La Conferencia</a
-          >
-          <a class="header__der-item" href="#oradores" style="color: gray"
-            >Los oradores</a
-          >
-          <a class="header__der-item" href="#postal" style="color: gray"
-            >El lugar y la fecha</a
-          >
-          <a class="header__der-item" href="#formulario" style="color: gray"
-            >Conviértete en orador</a
-          >
-          <a class="header__der-item" href="#heroe" style="color: green"
-            >Comprar tickets</a
-          >
-        </div>
-      </header>
       <section class="heroe" id="heroe">
-        <h2 class="heroe__titulo">Conf Bs As</h2>
-        <p class="heroe__descripcion">
-          Bs As llega por primera vez a Argentina. Un evento para compartir con
-          nuestra comunidad el conocimiento y experiencia de los expertos que
-          están creando el futuro de Internet. Ven a conocer a miembros del
-          evento, a otros estudiantes de Codo a Codo y los oradores de primer
-          nivel que tenemos para ti. Te esperamos!
-        </p>
-        <div class="heroe__botones">
-          <button class="btn heroe__botones-izq">Quiero ser orador</button>
-          <button class="btn heroe__botones-der">Comprar tickets</button>
+        <div class="heroe__contenido">
+          <h2 class="heroe__titulo">Conf Bs As</h2>
+          <p class="heroe__descripcion">
+            Bs As llega por primera vez a Argentina. Un evento para compartir
+            con nuestra comunidad el conocimiento y experiencia de los expertos
+            que están creando el futuro de Internet. Ven a conocer a miembros
+            del evento, a otros estudiantes de Codo a Codo y los oradores de
+            primer nivel que tenemos para ti. Te esperamos!
+          </p>
+          <div class="heroe__botones">
+            <button class="btn heroe__botones-izq">Quiero ser orador</button>
+            <button class="btn heroe__botones-der">Comprar tickets</button>
+          </div>
         </div>
       </section>
       <section class="oradores" id="oradores">
